--- a/public/output.css
+++ b/public/output.css
@@ -639,8 +639,12 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .mt-\[\.1rem\] {
@@ -659,8 +663,12 @@ video {
   margin-top: 3.3rem;
 }
 
-.block {
-  display: block;
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -685,8 +693,9 @@ video {
   height: 2rem;
 }
 
-.h-14 {
-  height: 3.5rem;
+.size-6 {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 .h-3 {
@@ -713,10 +722,6 @@ video {
   width: 7rem;
 }
 
-.w-32 {
-  width: 8rem;
-}
-
 .w-64 {
   width: 16rem;
 }
@@ -735,6 +740,14 @@ video {
 
 .max-w-\[38rem\] {
   max-width: 38rem;
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-5 {
+  grid-template-rows: repeat(5, minmax(0, 1fr));
 }
 
 .grid-rows-\[auto\2c auto\] {
@@ -868,8 +881,8 @@ video {
   padding-bottom: 1rem;
 }
 
-.pb-20 {
-  padding-bottom: 5rem;
+.pb-0 {
+  padding-bottom: 0px;
 }
 
 .pb-4 {
@@ -936,6 +949,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -987,10 +1005,6 @@ video {
   color: rgb(76 95 213 / var(--tw-text-opacity));
 }
 
-.text-gray {
-  color: #FFFFFF70;
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1021,18 +1035,27 @@ video {
 }
 
 @media (min-width: 432px) {
+  .sm\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
   .sm\:hidden {
     display: none;
+  }
+
+  .sm\:text-left {
+    text-align: left;
+  }
+
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
 @media (min-width: 768px) {
   .md\:mb-1\.5 {
     margin-bottom: 0.375rem;
-  }
-
-  .md\:ml-1 {
-    margin-left: 0.25rem;
   }
 
   .md\:ml-80 {
@@ -1047,12 +1070,12 @@ video {
     margin-top: 0.25rem;
   }
 
-  .md\:mt-11 {
-    margin-top: 2.75rem;
+  .md\:mt-10 {
+    margin-top: 2.5rem;
   }
 
-  .md\:mt-52 {
-    margin-top: 13rem;
+  .md\:mt-36 {
+    margin-top: 9rem;
   }
 
   .md\:mt-7 {
@@ -1063,6 +1086,14 @@ video {
     margin-top: 2rem;
   }
 
+  .md\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
+  .md\:inline-block {
+    display: inline-block;
+  }
+
   .md\:grid {
     display: grid;
   }
@@ -1071,20 +1102,17 @@ video {
     display: none;
   }
 
+  .md\:size-8 {
+    width: 2rem;
+    height: 2rem;
+  }
+
   .md\:h-12 {
     height: 3rem;
   }
 
-  .md\:h-16 {
-    height: 4rem;
-  }
-
   .md\:w-16 {
     width: 4rem;
-  }
-
-  .md\:w-40 {
-    width: 10rem;
   }
 
   .md\:w-\[23rem\] {
@@ -1100,7 +1128,15 @@ video {
   }
 
   .md\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-template-columns: repeat(4, 11rem);
+  }
+
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
+  .md\:items-end {
+    align-items: flex-end;
   }
 
   .md\:px-16 {
@@ -1118,12 +1154,20 @@ video {
     padding-bottom: 7rem;
   }
 
+  .md\:pb-20 {
+    padding-bottom: 5rem;
+  }
+
   .md\:pl-8 {
     padding-left: 2rem;
   }
 
   .md\:pr-3 {
     padding-right: 0.75rem;
+  }
+
+  .md\:text-right {
+    text-align: right;
   }
 
   .md\:text-4xl {
@@ -1134,6 +1178,11 @@ video {
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .md\:text-xs {
@@ -1246,8 +1295,8 @@ video {
     margin-left: 16rem;
   }
 
-  .xl\:ml-\[34\.5rem\] {
-    margin-left: 34.5rem;
+  .xl\:ml-\[37\.5rem\] {
+    margin-left: 37.5rem;
   }
 
   .xl\:mr-4 {
@@ -1266,36 +1315,24 @@ video {
     margin-top: 2.75rem;
   }
 
-  .xl\:mt-3 {
-    margin-top: 0.75rem;
-  }
-
   .xl\:mt-4 {
     margin-top: 1rem;
-  }
-
-  .xl\:mt-7 {
-    margin-top: 1.75rem;
-  }
-
-  .xl\:mt-6 {
-    margin-top: 1.5rem;
   }
 
   .xl\:mt-5 {
     margin-top: 1.25rem;
   }
 
-  .xl\:block {
-    display: block;
+  .xl\:mt-6 {
+    margin-top: 1.5rem;
   }
 
-  .xl\:inline-block {
-    display: inline-block;
+  .xl\:ml-\[37rem\] {
+    margin-left: 37rem;
   }
 
-  .xl\:inline {
-    display: inline;
+  .xl\:ml-\[36rem\] {
+    margin-left: 36rem;
   }
 
   .xl\:flex {
@@ -1314,16 +1351,6 @@ video {
   .xl\:size-9 {
     width: 2.25rem;
     height: 2.25rem;
-  }
-
-  .xl\:size-3 {
-    width: 0.75rem;
-    height: 0.75rem;
-  }
-
-  .xl\:size-7 {
-    width: 1.75rem;
-    height: 1.75rem;
   }
 
   .xl\:h-11 {
@@ -1366,6 +1393,10 @@ video {
     flex-direction: column;
   }
 
+  .xl\:items-start {
+    align-items: flex-start;
+  }
+
   .xl\:items-center {
     align-items: center;
   }
@@ -1377,6 +1408,11 @@ video {
   .xl\:gap-x-1 {
     -moz-column-gap: 0.25rem;
          column-gap: 0.25rem;
+  }
+
+  .xl\:px-14 {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
   }
 
   .xl\:px-20 {
@@ -1424,20 +1460,16 @@ video {
     padding-bottom: 11rem;
   }
 
-  .xl\:pl-3 {
-    padding-left: 0.75rem;
-  }
-
   .xl\:pb-14 {
     padding-bottom: 3.5rem;
   }
 
-  .xl\:text-left {
-    text-align: left;
+  .xl\:pl-3 {
+    padding-left: 0.75rem;
   }
 
-  .xl\:text-center {
-    text-align: center;
+  .xl\:text-left {
+    text-align: left;
   }
 
   .xl\:text-6xl {
@@ -1445,19 +1477,9 @@ video {
     line-height: 1;
   }
 
-  .xl\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .xl\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .xl\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .xl\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .xl\:text-lg {
@@ -1465,9 +1487,14 @@ video {
     line-height: 1.75rem;
   }
 
-  .xl\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
+  .xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .xl\:font-medium {
@@ -1492,10 +1519,6 @@ video {
 
   .\32xl\:ml-2 {
     margin-left: 0.5rem;
-  }
-
-  .\32xl\:ml-\[20\.4rem\] {
-    margin-left: 20.4rem;
   }
 
   .\32xl\:mr-0 {
