--- a/public/output.css
+++ b/public/output.css
@@ -643,6 +643,10 @@ video {
   margin-top: 0.75rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -661,10 +665,6 @@ video {
 
 .mt-\[3\.3rem\] {
   margin-top: 3.3rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
 }
 
 .inline-block {
@@ -691,11 +691,6 @@ video {
 .size-8 {
   width: 2rem;
   height: 2rem;
-}
-
-.size-6 {
-  width: 1.5rem;
-  height: 1.5rem;
 }
 
 .h-3 {
@@ -744,10 +739,6 @@ video {
 
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-rows-5 {
-  grid-template-rows: repeat(5, minmax(0, 1fr));
 }
 
 .grid-rows-\[auto\2c auto\] {
@@ -913,10 +904,6 @@ video {
   text-align: center;
 }
 
-.text-right {
-  text-align: right;
-}
-
 .font-GT-America {
   font-family: GT America Trial, sans-serif;
 }
@@ -1030,8 +1017,54 @@ video {
     format("woff2");
 }
 
+.hover\:border-spacing-1:hover {
+  --tw-border-spacing-x: 0.25rem;
+  --tw-border-spacing-y: 0.25rem;
+  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
+}
+
 .hover\:cursor-pointer:hover {
   cursor: pointer;
+}
+
+.hover\:border-2:hover {
+  border-width: 2px;
+}
+
+.hover\:border-\[1px\]:hover {
+  border-width: 1px;
+}
+
+.hover\:border-gray:hover {
+  border-color: #FFFFFF70;
+}
+
+.hover\:border-white:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-black:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(25 26 27 / var(--tw-bg-opacity));
+}
+
+.hover\:text-gray:hover {
+  color: #FFFFFF70;
+}
+
+.hover\:text-black:hover {
+  --tw-text-opacity: 1;
+  color: rgb(25 26 27 / var(--tw-text-opacity));
+}
+
+.hover\:underline:hover {
+  text-decoration-line: underline;
 }
 
 @media (min-width: 432px) {
@@ -1078,20 +1111,16 @@ video {
     margin-top: 9rem;
   }
 
+  .md\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
   .md\:mt-7 {
     margin-top: 1.75rem;
   }
 
   .md\:mt-8 {
     margin-top: 2rem;
-  }
-
-  .md\:mt-5 {
-    margin-top: 1.25rem;
-  }
-
-  .md\:inline-block {
-    display: inline-block;
   }
 
   .md\:grid {
@@ -1129,10 +1158,6 @@ video {
 
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, 11rem);
-  }
-
-  .md\:flex-col {
-    flex-direction: column;
   }
 
   .md\:items-end {
@@ -1178,11 +1203,6 @@ video {
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
-  }
-
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 
   .md\:text-xs {
@@ -1295,8 +1315,8 @@ video {
     margin-left: 16rem;
   }
 
-  .xl\:ml-\[37\.5rem\] {
-    margin-left: 37.5rem;
+  .xl\:ml-\[36rem\] {
+    margin-left: 36rem;
   }
 
   .xl\:mr-4 {
@@ -1305,10 +1325,6 @@ video {
 
   .xl\:mt-0 {
     margin-top: 0px;
-  }
-
-  .xl\:mt-1 {
-    margin-top: 0.25rem;
   }
 
   .xl\:mt-11 {
@@ -1325,14 +1341,6 @@ video {
 
   .xl\:mt-6 {
     margin-top: 1.5rem;
-  }
-
-  .xl\:ml-\[37rem\] {
-    margin-left: 37rem;
-  }
-
-  .xl\:ml-\[36rem\] {
-    margin-left: 36rem;
   }
 
   .xl\:flex {
@@ -1472,6 +1480,11 @@ video {
     text-align: left;
   }
 
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .xl\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
@@ -1490,11 +1503,6 @@ video {
   .xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .xl\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 
   .xl\:font-medium {
